hledger/test/errors/undeclared-commodity.j
# hledger check commodities

account a

1/1
  (a)  A 1
